Updated references to files in code to support PyInstaller. Added bash script to create a functioning MacOS Application.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 /venv/
 /colourpaletteextractor/build/__main__/
 /colourpaletteextractor/dist/__main__/
+/colourpaletteextractor/dist/__main__
+/colourpaletteextractor/__main__.spec
+/colourpaletteextractor/ColourPaletteExtractor.spec
