Added batch script to create an executable for Windows computers.
Updated View to include icon and set the theme of the application on Windows to follow the system's theme (light/dark mode)

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /colourpaletteextractor/dist/__main__
 /colourpaletteextractor/__main__.spec
 /colourpaletteextractor/ColourPaletteExtractor.spec
+/venv/
+/ColourPaletteExtractor-Executables/
+/ColourPaletteExtractor.spec
