Added build script for creating the ColourPaletteExtractor documentation

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /ColourPaletteExtractor-Executables/
 /colourpaletteextractor/model/dummyimagescript.py
 /colourpaletteextractor/view/resources/icons/light_mode copy/
+/docs/build/
