Added documentation for the model.py module.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 /colourpaletteextractor/view/resources/icons/light_mode copy/
 /docs/build/html/.doctrees/
 /docs/build/pdf/.doctrees/
+/testscript.py
+/colourpaletteextractor/data/sampleImages/sanjeevan-satheeskumar-MG8c-4n1QVE-unsplash copy 2.jpg
+/colourpaletteextractor/data/sampleImages/sanjeevan-satheeskumar-MG8c-4n1QVE-unsplash copy.jpg
+/colourpaletteextractor/data/sampleImages/sanjeevan-satheeskumar-MG8c-4n1QVE-unsplash.jpg
