More documentation changes.
Removed surplus python files.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /colourpaletteextractor/data/sampleImages/sanjeevan-satheeskumar-MG8c-4n1QVE-unsplash copy 2.jpg
 /colourpaletteextractor/data/sampleImages/sanjeevan-satheeskumar-MG8c-4n1QVE-unsplash copy.jpg
 /colourpaletteextractor/data/sampleImages/sanjeevan-satheeskumar-MG8c-4n1QVE-unsplash.jpg
+colourpaletteextractor/model/algorithms/grogan2018.py
+dummyalgorithm.py
